--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A promisified version of FileReader",
   "main": "kaanFileReader.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\""
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/lorkaan/kaanfiles/issues"
   },
-  "homepage": "https://github.com/lorkaan/kaanfiles#readme"
+  "homepage": "https://github.com/lorkaan/kaanfiles#readme",
+  "dependencies": {
+    "kaantypes": "^1.0.0"
+  }
 }
